--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
     </header>
     <main>
-
       <section class="movies__section container">
         <ul class="movies"></ul>
+        <div class="modal"></div>
         <div class="pagination">
           <button id="prevPage">Previous</button>
           <button id="nextPage">Next</button>
@@ -28,3 +28,5 @@
     <script src="./src/JS/app.js"></script>
   </body>
 </html>
+
+
